# SolFlow

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
api/sol-man/: _jsonRepair.ts  _prompt.ts  _providers.ts  _semanticRepair.ts  _validate.ts  generate.ts
compiler/: AST_SERDE_NOTES.md  Cargo.toml  README.md  REMAINING_PANICS.md  UPSTREAM.md
compiler-wasm/: Cargo.toml  README.md  build.cmd  build.sh
compiler-wasm/examples/: dump_ast.rs
compiler-wasm/pkg/: .gitignore  README.md  package.json  solflow_compiler_wasm.d.ts  solflow_compiler_wasm.js  solflow_compiler_wasm_bg.js  solflow_compiler_wasm_bg.wasm  solflow_compiler_wasm_bg.wasm.d.ts
compiler-wasm/pkg-node/: .gitignore  package.json  solflow_compiler_wasm.d.ts  solflow_compiler_wasm.js  solflow_compiler_wasm_bg.wasm
compiler-wasm/src/: lib.rs
compiler-wasm/tests/: smoke.rs
compiler/src/: analyzer.rs  api.rs  bytecode.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  util.rs
compiler/tests/: api_smoke.rs  diagnostics.rs  serde_roundtrip.rs
compiler/tests/fixtures/negative/: error_codegen_ext.sol  error_parse1.sol  error_parse2.sol  error_runtime.sol  error_sema_arith_bad_type.sol  error_sema_arith_mismatch.sol  error_sema_assign.sol  error_sema_bang.sol  error_sema_bitwise.sol  error_sema_call_argtype.sol  error_sema_call_arity.sol  error_sema_call_undef.sol  error_sema_compare.sol  error_sema_cond.sol  error_sema_forin.sol  error_sema_logic.sol  error_sema_mixed.sol  error_sema_negate.sol  error_sema_tilde.sol  error_semantic1.sol  error_semantic2.sol  error_semantic3.sol
compiler/tests/fixtures/positive/: fwdecl.sol  gemini_long.sol  jj_comp.sol  jjsi.sol  largemini.sol  retest.sol  s1.sol  s2.sol  test_arith.sol  test_array.sol  test_control.sol  test_edge.sol  test_func.sol  test_scope.sol  test_struct.sol
controller/: Cargo.toml
controller/examples/: CONNECTORS.md  weather-connector.py
controller/migrations/: 0001_initial.sql  0002_schedules.sql  0003_run_events.sql  0004_lifecycle_expansion.sql
controller/src/: canonical_exec.rs  event_sink.rs  executor.rs  lib.rs  local.rs  openprem.rs  persistence.rs  run_manager.rs  scheduler.rs  server.rs  tls.rs
controller/src/connector/: http.rs  mod.rs
controller/tests/: tls_integration.rs
docs/: DEMO.md  README.md
docs/dev/: ARCHITECTURE.md  CONNECTORS.md  CONTROLLER_LOCAL.md  CONTROLLER_OPERATIONS.md  EVENTS.md  OPENPREM_COMPAT_MATRIX.md  OPENPREM_PROVIDERS.md  PHASE_C_ARCHITECTURE.md  PHASE_C_ROADMAP.md  PHASE_C_VALIDATION.md  README.md  REMOTE_CONTROLLER.md  RUN_LIFECYCLE.md  SCHEDULING.md
docs/screenshots/: README.md
docs/sol-language/: 00-source-audit.md  01-overview.md  02-file-structure.md  03-syntax.md  04-types.md  05-functions.md  06-variables-and-scope.md  07-control-flow.md  08-expressions.md  09-structs.md  10-enums.md  11-arrays.md  12-imports-and-controllers.md  13-builtins-and-stdlib.md  14-runtime-semantics.md  15-errors-and-diagnostics.md  16-examples.md  17-style-guide.md  18-solflow-mapping.md  19-solman-generation-guide.md  20-implementation-notes.md  21-behavior-classification.md  22-cross-layer-assumptions.md  23-editor-runtime-audit.md  B_RELEASE_NOTES.md  CANONICALIZATION.md  ERROR_REFERENCE.md  EXAMPLES.md  GRAMMAR.md  IMPORT_COMPATIBILITY.md  PHASE_B_COMPILER_IDE_PLAN.md  README.md  REMEDIATION_PLAN.md  SIMULATOR_PARITY.md  SPEC.md  SYNC_MODEL.md  internal-notes.md
docs/user/: EDITOR_GUIDE.md  FAQ.md  INSTALL.md  QUICKSTART.md  README.md
host-spec/: Cargo.toml
host-spec/src/: lib.rs
runtime/: Cargo.toml  UPSTREAM.md
runtime/src/: error.rs  extcall.rs  lib.rs  vm.rs
runtime/tests/: vm_basic.rs
scripts/: package-local.mjs  qa-capability-full.mjs  qa-capability-ui.mjs  qa-controller-trace.mjs  qa-drag.mjs  qa-edit-overflow.mjs  qa-final-prod.mjs  qa-panels.mjs  qa-payload.mjs  qa-providers-ui.mjs  qa-trace-controller-ui.mjs  qa-trace.mjs  qa-visual.mjs  regen-import-fixtures.mjs  regenerate-ast-fixtures.sh  release-check.mjs  verify-samples.mjs
sol/: Cargo.toml
sol/src/: analysis.rs  ast.rs  compiler.rs  crypto.rs  format.rs  instruction.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  value.rs  vm.rs  workflow.rs
sol/tests/: format_roundtrip.rs
solflow-demo/: .gitignore  README.md  package-lock.json  package.json
solflow-demo/scripts/: verify-inline-emit.mjs
solflow-demo/src/: App.vue  main.ts
src/: App.vue  main.ts
src/compiler/: api.ts  ast.ts  types.ts  worker.ts
src/components/: ActiveRunsModal.vue  BlocksPanel.vue  BranchConditionBuilder.vue  Canvas.vue  CompilerDiagnosticPanel.vue  ContextMenu.vue  ControllerSettingsModal.vue  DiagnosticsDrawer.vue  ExecutionControls.vue  ExecutionTimeline.vue  ExpressionHelper.vue  FunctionTabs.vue  HelpModal.vue  ImportReportModal.vue  ImportsPanel.vue  Inspector.vue  NodePalette.vue  NodeSearchPalette.vue  OutlinePanel.vue  QuickAddPalette.vue  RunHistoryModal.vue  RunModal.vue  SchedulesModal.vue  Sidebar.vue  SolManModal.vue  SolNode.vue  SourcePreview.vue  Splitter.vue  StatusBar.vue  Toast.vue  Toolbar.vue  TracePanel.vue  TypesPanel.vue  WelcomeScreen.vue
src/composables/: panelZ.ts  useDraggablePanel.ts  useTheme.ts
src/embed/: bridge.ts
src/emit/: README.md  emit.ts
src/graph/: blocks.ts  expressionLint.ts  factory.ts  kinds.ts  nodeLookup.ts  portMeta.ts  schema.ts  validate.ts
src/runtime/: interpret.ts  simulate.ts
src/runtime-host/: client.ts  encode.ts  event-stream.ts  opremClient.ts  types.ts
src/samples/: builders.ts  capabilityDemo.ts  enterprise.ts  hello.ts  index.ts  monitor.ts  orchestration.ts  payments.ts  smokeTest.ts  webhookOrder.ts
src/sol-man/: applyGraph.ts  autoLayout.ts  client.ts  types.ts
src/stores/: blocks.store.ts  controller-run-history.store.ts  controller.store.ts  graph.store.ts  runInput.store.ts  simulation.store.ts  sol-man-config.store.ts  sol-man.store.ts  toast.store.ts  tracePanel.store.ts  (+1 more)
(+90 files in other folders)
