# Root Cargo workspace for SolFlow's Rust components.
#
# Today the workspace has one member — the standalone SOL compiler
# vendored into `compiler/`. The B.4 WASM bridge will add a second
# member (`compiler-wasm/`) without touching this manifest beyond an
# additional entry in the members list.
#
# The TypeScript editor at the repo root is independent of this
# workspace; Vite / pnpm ignore `Cargo.toml`. The `target/` build
# artifacts are gitignored.

[workspace]
resolver = "2"
members = ["compiler"]
