# Root Cargo workspace for SolFlow's Rust components.
#
# The canonical SOL language lives in `sol/` (openprem-sol-v2). The
# WASM bridge in `compiler-wasm/` compiles + runs SOL for the editor;
# `host-spec/` carries the IDE-to-controller wire types and
# `controller/` is the run host. All four build on `sol/`.
#
# The TypeScript editor at the repo root is independent of this
# workspace; Vite / pnpm ignore `Cargo.toml`. The `target/` build
# artifacts are gitignored.

[workspace]
resolver = "2"
members = ["sol", "compiler-wasm", "host-spec", "controller"]
