[package]
name = "solflow_compiler_wasm"
version = "0.2.0"
edition = "2021"
description = "wasm-bindgen bridge exposing the canonical SOL crate to the SolFlow browser editor."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openprem-sol-v2 = { path = "../sol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

