[package]
name = "solflow_controller"
version = "0.1.0"
edition = "2024"
description = "SolFlow orchestration controller — Phase C. C.2 ships a working local controller binary with SQLite persistence + HTTP API."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "solflow-controller"
path = "src/bin/server.rs"

[dependencies]
# Core SOL compilation + execution. The controller hosts the
# canonical VM so production runs use exactly the same semantics
# as the browser sim.
solflow_compiler = { path = "../compiler", features = ["serde"] }
solflow_runtime = { path = "../runtime" }
# Wire-protocol shapes (RunRecord, RunEvent, ...) + bytecode
# encoding helpers.
solflow_host_spec = { path = "../host-spec" }

# Async runtime + trait support.
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }

# Error handling for trait return values. Lightweight.
thiserror = "1"

# serde + serde_json — declared explicitly so trait bodies
# don't depend on transitive features.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence backend (C.2). SQLite for the local-first MVP.
# `runtime-tokio-rustls` keeps a single TLS impl across the
# workspace; sqlite feature is built-in to sqlx without an
# external libsqlite3.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }

# UUID generation for run/workflow IDs.
uuid = { version = "1", features = ["v4"] }

# SHA-256 for content-hashing submitted bytecode (audit + replay).
sha2 = "0.10"
hex = "0.4"

# Timestamps. Used for created_at / started_at / completed_at.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Cron expression parsing (C.3). MIT, no transitive deps beyond
# chrono which we already pull in. Standard 5/6/7-field cron.
cron = "0.16"

# Phase C C.4 — connector framework.
# `url` for parsing `connector://name?...` invocations; `reqwest`
# for the HTTP reference connector. rustls-tls keeps the TLS impl
# uniform with sqlx; no system OpenSSL dep.
url = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "charset",
    "http2",
] }

# HTTP server (C.2 c61).
axum = { version = "0.7", features = ["macros"] }
# Phase C C.7 c100 — axum-server adds optional TLS termination on
# top of axum. HTTP-only mode still goes through `axum::serve` so
# c97-and-earlier deployments don't pay for TLS code they aren't
# using. We also pull in `rustls` directly with the `ring`
# crypto-provider feature so rustls 0.23's mandatory
# `CryptoProvider::install_default()` step works on every entry
# point — without this, axum-server panics on its first TLS handshake.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
# Stream helpers for the SSE endpoint (C.5 c83). `tokio-stream`
# wraps a `broadcast::Receiver` as a `Stream`; `async-stream`
# lets us chain replay + live cleanly with an async generator.
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# In-memory SQLite for tests; production uses on-disk.
tempfile = "3"
# Mock HTTP server for HTTP-connector tests (C.4). Pure-Rust,
# wraps hyper; no external service required.
wiremock = "0.6"
# Phase C C.7 c100 — synthesize ephemeral self-signed certificates
# for the HTTPS integration tests. Pure-Rust; no openssl
# dependency. Test-only.
rcgen = "0.13"
