[package]
name = "solflow_host_spec"
version = "0.1.0"
edition = "2024"
description = "IDE ↔ controller wire-protocol types for Phase C. Pure data + serde; no transport, no impl."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Diagnostics + spans flow through unchanged from the compiler so
# event payloads can carry source-mapped runtime errors.
solflow_compiler = { path = "../compiler", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
